pyquest/ql/test/semantic_analysis/invalid/test010.ql
// Incompatible types for addition operation
form testForm {
	"First Question"
	someIdentifier : decimal = 10.0 + True
}